@@ -1,0 +1,5 @@
+<section>
+    <title ids="s4">nice heading</title>
+    <paragraph>Text with <strong ids="s4">strong
+    statement</strong> and more text.</paragraph>
+</section>
